--- a/test/test.html
+++ b/test/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>itertools.js Test Suite</title>
+  <title>itertool.js Test Suite</title>
   <link rel="stylesheet" href="vendor/qunit.css" type="text/css" media="screen" />
   <script type="text/javascript" src="vendor/jquery.js"></script>
   <script type="text/javascript" src="vendor/qunit.js"></script>
@@ -13,7 +13,7 @@
   <script type="text/javascript" src="terminating.js"></script>
 </head>
 <body>
-  <h1 id="qunit-header">itertools.js Test Suite</h1>
+  <h1 id="qunit-header">itertool.js Test Suite</h1>
   <h2 id="qunit-banner"></h2>
   <h2 id="qunit-userAgent"></h2>
   <ol id="qunit-tests"></ol>
