Made all itertool functions lazier, except for `tee`, for now. Added helper functions to facilitate in writing iterators Added enumerate

--- a/test/test.html
+++ b/test/test.html
@@ -11,6 +11,7 @@
   <script type="text/javascript" src="builder.js"></script>
   <script type="text/javascript" src="infinite.js"></script>
   <script type="text/javascript" src="terminating.js"></script>
+  <script type="text/javascript" src="utility.js"></script>
 </head>
 <body>
   <h1 id="qunit-header">itertool.js Test Suite</h1>
