--- a/test/test.html
+++ b/test/test.html
@@ -11,6 +11,7 @@
   <script type="text/javascript" src="builder.js"></script>
   <script type="text/javascript" src="infinite.js"></script>
   <script type="text/javascript" src="terminating.js"></script>
+  <script type="text/javascript" src="combinatronic.js"></script>
   <script type="text/javascript" src="utility.js"></script>
 </head>
 <body>
