added unit test for permutations, combinations, and combinations_with_replacement and corrected them

--- a/test/test.html
+++ b/test/test.html
@@ -6,6 +6,8 @@
   <script type="text/javascript" src="vendor/jquery.js"></script>
   <script type="text/javascript" src="vendor/qunit.js"></script>
   <script type="text/javascript" src="vendor/underscore.js"></script>
+  <script type="text/javascript" src="vendor/json2.js"></script>
+  
   <script type="text/javascript" src="../itertool.js"></script>
   
   <script type="text/javascript" src="builder.js"></script>
