removed dependency from jQuery

--- a/test/test.html
+++ b/test/test.html
@@ -8,7 +8,7 @@
   <script type="text/javascript" src="vendor/underscore.js"></script>
   <script type="text/javascript" src="vendor/json2.js"></script>
   
-  <script type="text/javascript" src="../itertool.js"></script>
+  <script type="text/javascript" src="../src/itertool.js"></script>
   
   <script type="text/javascript" src="builder.js"></script>
   <script type="text/javascript" src="infinite.js"></script>
